--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 LOCAL_DB_ADDRESS=mongodb://localhost:27017/shopping-mall
+PROD_DB_ADDRESS=mongodb+srv://oboki2001:qKtpoxyGx7Ui7aJ1@cluster0.8zm00lj.mongodb.net/shopping-mall
 PORT=5000
 JWT_SECRET_KEY=asfdwerdxvzceoowe
